--- a/_layouts/client.html
+++ b/_layouts/client.html
@@ -4,3 +4,12 @@ layout: default
 <h1>{{ page.name }}</h1>
 
 {{ content }}
+
+<h2>Slides</h2>
+<ul>
+    {% for slide in site.data.slides %}
+        {% if slide.client == page.short_name %}
+            <li><img data-work="{{ slide.work }}" src="{{ slide.src }}" alt=""></li>
+        {% endif %}
+    {% endfor %}
+</ul>
