--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -4,3 +4,12 @@ layout: default
 <h1>{{ page.name }}</h1>
 
 {{ content }}
+
+<h2>Slides</h2>
+<ul>
+    {% for slide in site.data.slides %}
+        {% if slide.work == page.short_name %}
+            <li><img data-client="{{ slide.client }}" src="{{ slide.src }}" alt=""></li>
+        {% endif %}
+    {% endfor %}
+</ul>
