--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,6 @@
   <body>
     {% include navigation.html %}
     {{ content }}
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
