Add slick, Add style

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -6,10 +6,12 @@ layout: default
 {{ content }}
 
 <h2>Slides</h2>
-<ul>
-    {% for slide in site.data.slides %}
-        {% if slide.work == page.short_name %}
-            <li><img data-client="{{ slide.client }}" src="{{ slide.src }}" alt=""></li>
-        {% endif %}
-    {% endfor %}
-</ul>
+<div class="slider-container">
+    <div class="works-slider">
+        {% for slide in site.data.slides %}
+            {% if slide.work == page.short_name %}
+                <div><img data-client="{{ slide.client }}" src="{{ slide.src }}" alt=""></div>
+            {% endif %}
+        {% endfor %}
+    </div>
+</div>
