--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,14 @@
 <nav>
-    {% for item in site.data.navigation %}
-        <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>
-            {{ item.name }}
-        </a>
-    {% endfor %}
+    <div id="logo">
+        <a href="/"><img src="/assets/images/magnet-logo.png" alt="Magnet Creative Branding logo"></a>
+    </div>
+    <ul>
+        {% for item in site.data.navigation %}
+        <li>
+            <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>
+                {{ item.name }}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
 </nav>
