--- a/_layouts/client.html
+++ b/_layouts/client.html
@@ -6,6 +6,17 @@ layout: default
 {{ content }}
 
 <h2>Slides</h2>
+<div class="slider-container">
+    <div class="clients-slider">
+        {% for slide in site.data.slides %}
+            {% if slide.client == page.short_name %}
+                <div><img data-work="{{ slide.work }}" src="{{ slide.src }}" alt=""></div>
+            {% endif %}
+        {% endfor %}
+    </div>
+</div>
+
+<!-- <h2>Slides</h2>
 <a href="#print" data-work='print' class="jump_to" onclick="return false;">Show Print</a>
 <a href="#content" data-work='content' class="jump_to" onclick="return false;">Show Content</a>
 <ul>
@@ -14,4 +25,4 @@ layout: default
             <li><img class="slide" data-work="{{ slide.work }}" src="{{ slide.src }}" alt=""></li>
         {% endif %}
     {% endfor %}
-</ul>
+</ul> -->
