--- a/_layouts/client.html
+++ b/_layouts/client.html
@@ -1,19 +1,21 @@
 ---
 layout: default
 ---
-<h1>{{ page.name }}</h1>
-
-{{ content }}
-
-<h2>Slides</h2>
 <div class="slider-container">
-    <div class="clients-slider">
+    <div class="slider">
         {% for slide in site.data.slides %}
             {% if slide.client == page.short_name %}
                 <div><img data-work="{{ slide.work }}" src="{{ slide.src }}" alt=""></div>
             {% endif %}
         {% endfor %}
     </div>
+</div>
+<div id="footer">
+    <p>
+        print | content 
+        <span>&gt;</span> 
+        <span id="brand-name"></span>
+    </p>
 </div>
 
 <!-- <h2>Slides</h2>
