--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -1,17 +1,15 @@
 ---
 layout: default
 ---
-<h1>{{ page.name }}</h1>
-
-{{ content }}
-
-<h2>Slides</h2>
 <div class="slider-container">
-    <div class="works-slider">
+    <div class="slider">
         {% for slide in site.data.slides %}
             {% if slide.work == page.short_name %}
                 <div><img data-client="{{ slide.client }}" src="{{ slide.src }}" alt=""></div>
             {% endif %}
         {% endfor %}
     </div>
+</div>
+<div id="footer">
+    <p>print | content <span>&gt;</span> maxx royal</p>
 </div>
