--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,6 +19,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    .wrapper {
+        width: 100%;
+        margin: auto;
+    }
 }
 
 nav {
