--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -11,5 +11,9 @@ layout: default
     </div>
 </div>
 <div id="footer">
-    <p>print | content <span>&gt;</span> maxx royal</p>
+    <p>
+        <span class="work-name">{{ page.name }}</span>
+        <span>&gt;</span> 
+        <span id="client-name"></span>
+    </p>
 </div>
