--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,6 +5,11 @@ $brand-color: #BB958C;
 $primary-color: #ffffff;
 $secondary-color: #F2BB00;
 
+%color-transition {
+    color: $secondary-color;
+    transition: color 0.2s ease-in-out;
+}
+
 html, body {
     height: 100%;
     min-height: 100%;
@@ -46,11 +51,6 @@ nav {
         color: $primary-color;
     }
 
-    %color-transition {
-        color: $secondary-color;
-        transition: color 0.2s ease-in-out;
-    }
-
     a:hover {
         @extend %color-transition;
     }
@@ -81,6 +81,76 @@ nav {
         width: 50%;
         min-width: 500px;
     }
+    #crossing-animation {
+        position: relative;
+        .part {
+            position: absolute;
+        }
+        #left-line {
+            border: 5px solid $primary-color;
+            width: 0;
+            left: 0%;
+        }
+        #left-line:hover {
+            width: 50%;
+            transition: width 2s ease-in-out;
+        }
+        #right-text {
+            border: 5px solid $primary-color;
+            right: 0%;
+            width: 0%;
+        }
+        #right-text:hover {
+            width: 50%;
+            transition: width 2s ease-in-out;
+        }
+    }
+}
+
+#works-wrapper {
+    height: 100%;
+    min-height: 100%;
+
+    #works-content {
+        padding: 1em;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        position: absolute;
+        bottom: 0%;
+        right: 0%;
+        left: 0%;
+    }
+
+    #works-info {
+        flex: 2;
+        padding: 1em;
+        line-height: 1.5em;
+    }
+
+    #works-list {
+        flex: 1;
+        padding: 1em;
+        text-align: right;
+
+        li {
+            margin: 8px 0;
+    
+            a {
+                color: $primary-color;
+                text-transform: lowercase;
+                font-size: 1.5em;
+            }
+
+            a:hover {
+                @extend %color-transition;
+            }
+        }
+
+        li:first-child {
+            margin: 0;
+        }
+    }
 }
 
 .slider-container {
@@ -96,6 +166,24 @@ nav {
             }
         }   
     }
+}
+
+.work-name:first-child::before {
+    content: '';
+}
+
+.work-name::before {
+    content: '| ';
+    margin-right: 20px;
+}
+
+.work-name {
+    text-transform: lowercase;
+    padding: 6px 12px;
+}
+
+#client-name {
+    padding: 6px 12px;
 }
 
 #footer {
