--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -14,6 +14,6 @@ layout: default
     <p>
         <span class="work-name">{{ page.name }}</span>
         <span>&gt;</span> 
-        <span id="client-name"></span>
+        <span id="client-name-in-wroks" class="client-name"></span>
     </p>
 </div>
