--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -10,6 +10,12 @@ ul, ol {
   list-style: none;
 }
 
-a {
+a:link, a:visited { 
+  color: white;
   text-decoration: none;
+  cursor: pointer;
+}
+
+a:link:active, a:visited:active { 
+  color: white;
 }
