--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -10,10 +10,10 @@ layout: default
         {% endfor %}
     </div>
 </div>
-<footer id="footer">
+<div id="footer">
     <p>
         <span class="work-name">{{ page.name }}</span>
         <span>&gt;</span> 
         <span id="client-name-in-wroks" class="client-name"></span>
     </p>
-</footer>
+</div>
