--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <title>{{ page.title }} | Magnet Creative Branding</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
     <link rel="stylesheet" href="/assets/libraries/slick/slick.css">
     <link rel="stylesheet" href="/assets/libraries/slick/slick-theme.css">
     {% feed_meta %}
