--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,6 @@
 <nav>
     <div id="logo">
-        <a href="/"><img src="/assets/images/magnet-logo.png" alt="Magnet Creative Branding logo"></a>
+        <a href="/"><img src="/assets/images/magnet.png" alt="Magnet Creative Branding logo"></a>
     </div>
     <ul id="navbar">
         {% for item in site.data.navigation %}
