--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,22 +3,12 @@
 
 @font-face {
     font-family: 'Less';
-    src: url('/assets/fonts/Less.otf'); /* IE9 Compat Modes */
-    src: url('/assets/fonts/Less.otf?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-        url('/assets/fonts/Less.otf') format('woff2'), /* Super Modern Browsers */
-        url('/assets/fonts/Less.otf') format('woff'), /* Pretty Modern Browsers */
-        url('/assets/fonts/Less.otf')  format('truetype'), /* Safari, Android, iOS */
-        url('/assets/fonts/Less.otf#svgFontName') format('svg'); /* Legacy iOS */
+    src: url('/assets/fonts/Less.otf');
 }
 
 @font-face {
     font-family: 'GlacialIndifference-Regular';
-    src: url('/assets/fonts/GlacialIndifference-Regular.otf'); /* IE9 Compat Modes */
-    src: url('/assets/fonts/GlacialIndifference-Regular.otf?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-        url('/assets/fonts/GlacialIndifference-Regular.otf') format('woff2'), /* Super Modern Browsers */
-        url('/assets/fonts/GlacialIndifference-Regular.otf') format('woff'), /* Pretty Modern Browsers */
-        url('/assets/fonts/GlacialIndifference-Regular.otf')  format('truetype'), /* Safari, Android, iOS */
-        url('/assets/fonts/GlacialIndifference-Regular.otf#svgFontName') format('svg'); /* Legacy iOS */
+    src: url('/assets/fonts/GlacialIndifference-Regular.otf');
 }
 
 $font-stack: 'Montserrat', Helvetica, sans-serif;
@@ -88,6 +78,10 @@ nav {
     }
 
     #logo {
+        width: 15%;
+        min-width: 150px;
+        img { width: 100%; }
+
         @media screen and (max-width: $break-small) {
             display: none;
         }
@@ -114,7 +108,7 @@ nav {
     img {
         width: 50%;
         min-width: 300px;
-        margin: 1em;
+        margin-bottom: 3em;
     }
 
     #crossing-animation {
@@ -122,14 +116,19 @@ nav {
         display: flex;
         flex-direction: row;
         align-items: center;
+
+        @media screen and (max-width: $break-small) {
+            flex-direction: column;
+        }
         
         .part {
             position: absolute;
         }
         #left-line {
-            border-bottom: 15px solid $primary-color;
+            border-bottom: 17px solid $primary-color;
             width: 0;
             left: 0%;
+            opacity: 0.5;
             -webkit-animation: lineGetsWider 3s;
             -moz-animation:    lineGetsWider 3s; 
             -o-animation:      lineGetsWider 3s; 
@@ -147,6 +146,7 @@ nav {
             right: 0%;
             width: 15%;
             opacity: 0;
+            line-height: 0.5em;
             font-size: 1.2em;
             -webkit-animation: textAppearsAndSlides 3s;
             -moz-animation:    textAppearsAndSlides 3s; 
@@ -186,12 +186,16 @@ nav {
     }
 
     #works-info {
-        flex: 2;
+        flex: 1;
         padding: 1em;
         line-height: 1.5em;
 
-        h3 {
+        h2 {
             margin: 0;
+        }
+
+        p {
+            line-height: 1.5em;
         }
     }
 
@@ -222,14 +226,14 @@ nav {
 
 .slider-container {
     margin: auto;
-    width: 90%;
+    width: 80%;
 
     .slider {
         .slick-slide {
             text-align: center;
             img {
                 margin: auto;
-                width: 50%;
+                height: 75vh;
             }
         }   
     }
@@ -256,6 +260,16 @@ nav {
 
 .client-name {
     padding: 6px 12px;
+}
+
+#clients-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    ul {
+        text-align: left;
+    }
 }
 
 #footer {
