--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="slider-container">
+<div class="slider-container fadeIn animated">
     <div class="slider">
         {% for slide in site.data.slides %}
             {% if slide.work == page.short_name %}
