--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
     <div id="logo">
         <a href="/"><img src="/assets/images/magnet-logo.png" alt="Magnet Creative Branding logo"></a>
     </div>
-    <ul id="navbar">
+    <ul id="navbar" class="animated fadeIn">
         {% for item in site.data.navigation %}
         <li>
             <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>
