--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -109,6 +109,10 @@ nav {
         width: 50%;
         min-width: 300px;
         margin-bottom: 3em;
+
+        @media screen and (max-width: $break-small) {
+            margin-bottom: 1em;
+        }
     }
 
     #crossing-animation {
@@ -116,13 +120,12 @@ nav {
         display: flex;
         flex-direction: row;
         align-items: center;
-
-        @media screen and (max-width: $break-small) {
-            flex-direction: column;
-        }
         
         .part {
             position: absolute;
+            @media screen and (max-width: $break-small) {
+                position: relative;
+            }
         }
         #left-line {
             border-bottom: 17px solid $primary-color;
@@ -134,6 +137,10 @@ nav {
             -o-animation:      lineGetsWider 3s; 
             animation:         lineGetsWider 3s; 
             animation-fill-mode: forwards;
+
+            @media screen and (max-width: $break-small) {
+                border-bottom: 5px solid $primary-color;
+            }
         }
         @keyframes lineGetsWider {
             100% {
@@ -153,12 +160,35 @@ nav {
             -o-animation:      textAppearsAndSlides 3s; 
             animation:         textAppearsAndSlides 3s; 
             animation-fill-mode: forwards;
+
+            @media screen and (max-width: $break-small) {
+                line-height: 1em;
+                text-align: center;
+                margin: 1em;
+                width: 90%;
+            }
         }
 
         @keyframes textAppearsAndSlides {
             100% {
                 opacity: 1;
                 width: 49%;
+            }
+        }
+
+        @media screen and (max-width: $break-small) {
+            flex-direction: column;
+            @keyframes lineGetsWider {
+                100% {
+                    width: 100%;
+                }
+            }
+            
+            @keyframes textAppearsAndSlides {
+                100% {
+                    opacity: 1;
+                    width: 100%;
+                }
             }
         }
     }
