--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -264,6 +264,9 @@ nav {
             img {
                 margin: auto;
                 height: 75vh;
+                @media screen and (max-width: $break-small) {
+                    height: 50vh;
+                }
             }
         }   
     }
