Add contact responsiveness

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     {% seo %}
   </head>
   <body>
-    <div {% if page.id == 'home' %}id="home-wrapper"{% endif %} {% if page.id == 'works' %}id="works-wrapper"{% endif %} class="wrapper">
+    <div {% if page.id == 'home' %}id="home-wrapper"{% endif %} {% if page.id == 'works' %}id="works-wrapper"{% endif %} {% if page.id == 'contact' %}id="contact-wrapper"{% endif %} class="wrapper">
       {% include navigation.html %}
       <main>
         {{ content }}
