--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -301,16 +301,6 @@ nav {
     padding: 6px 12px;
 }
 
-#clients-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    ul {
-        text-align: left;
-    }
-}
-
 #footer {
     position: absolute;
     bottom: 0%;
@@ -333,27 +323,36 @@ nav {
 }
 
 #clients-content {
-    ul {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1em;
+    justify-items: center;
+    align-items: center;
+    width: 90%;
+    margin: auto;
+
+    @media screen and (max-width: $break-large) {
+        grid-template-columns: repeat(3, 1fr);
     }
 
-    li {
-        margin: 0.5em;
-        height: 100px;
+    @media screen and (max-width: $break-small) {
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 2em;
+    }
+
+    div {
+        width: 150px;
+        // background-color: rgba($color: #000000, $alpha: 0.5);
     }
 
     img {
-        height: 100%;
+        width: 100%;
         transition: all 0.25s ease-in-out;
     }
 
     img:hover{
-        -webkit-filter:none; 
-        filter:none;
+        -webkit-filter: none; 
+        filter: none;
     }
 
     .brightness {
