--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -57,6 +57,7 @@ nav {
     align-items: center;
     padding: 1em;
     position: absolute;
+    z-index: 999;
     top: 0%;
     right: 0%;
     left: 0%;
@@ -275,8 +276,7 @@ nav {
                 height: 75vh;
 
                 @media screen and (max-width: $break-large) {
-                    height: auto;
-                    width: 90%;
+                    height: 45vh;
                 }
 
                 @media screen and (max-width: $break-small) {
@@ -378,7 +378,7 @@ nav {
     height: 100%;
     min-height: 100%;
 
-    @media screen and (max-width: $break-small) {
+    @media screen and (max-width: $break-large) {
         margin-top: 150px;
     }
 
