--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -346,11 +346,13 @@ nav {
 
     @media screen and (max-width: $break-large) {
         grid-template-columns: repeat(3, 1fr);
+        margin-top: 25%;
     }
 
     @media screen and (max-width: $break-small) {
         grid-template-columns: repeat(1, 1fr);
         grid-row-gap: 2em;
+        margin-top: 260%;
     }
 
     div {
