Add vh for mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -282,6 +282,7 @@ nav {
 
                 @media screen and (max-width: $break-small) {
                     height: auto;
+                    max-height: 60vh;
                     width: 100%;
                 }
             }
