Add new work, Change brand

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,7 @@
 $font-stack: 'Montserrat', Helvetica, sans-serif;
 
 // Color variables
-$brand-color: #bb958c;
+$brand-color: #CA9A8E;
 $primary-color: #ffffff;
 $secondary-color: #F2BB00;
 
