--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -20,6 +20,7 @@ $secondary-color: #F2BB00;
 
 // Media Query Break Points
 $break-small: 500px;
+$break-medium: 768px;
 $break-large: 1024px;
 
 %color-transition {
@@ -352,6 +353,12 @@ nav {
 
     @media screen and (max-width: $break-large) {
         grid-template-columns: repeat(3, 1fr);
+        margin-top: 150px;
+        margin-bottom: 50px;
+    }
+
+    @media screen and (max-width: $break-large) {
+        grid-template-columns: repeat(2, 1fr);
         margin-top: 150px;
         margin-bottom: 50px;
     }
