--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -88,6 +88,7 @@ nav {
     #logo {
         width: 15%;
         min-width: 150px;
+        max-width: 200px;
         img { width: 100%; }
     }
 }
