--- a/_layouts/client.html
+++ b/_layouts/client.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<span class="client-name" style="font-weight: bold; font-size: 1.2em; letter-spacing: 5px;">{{ page.name }}</span><br><br>
 <div class="slider-container fadeIn animated">
     <div class="slider">
         {% for slide in site.data.slides %}
@@ -10,12 +11,8 @@ layout: default
         {% endfor %}
     </div>
 </div>
-<div id="footer">
-    <p>
-        {% for work in page.works %}
-            <a href="#{{work}}" data-work="{{work}}" class="work-name">{{work}}</a>
-        {% endfor %}
-        <span>&gt;</span> 
-        <span class="client-name">{{ page.name }}</span>
-    </p>
+<div style="margin-top: 1.5em;">
+    {% for work in page.works %}
+        <a href="#{{work}}" data-work="{{work}}" class="work-name">{{work}}</a>
+    {% endfor %}
 </div>
