Edit font sizes

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -301,6 +301,10 @@ nav {
     border-left: 1px solid white;
     padding: 0 12px;
     margin-top: 1em;
+
+    @media screen and (max-width: $break-small) {
+        font-size: 0.7em;
+    }
 }
 
 .work-name:hover {
