--- a/_layouts/client.html
+++ b/_layouts/client.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<span class="client-name" style="font-weight: bold; font-size: 1.2em; letter-spacing: 5px;">{{ page.name }}</span><br><br>
+<span class="client-name" style="letter-spacing: 4px;">{{ page.name }}</span><br><br>
 <div class="slider-container fadeIn animated">
     <div class="slider">
         {% for slide in site.data.slides %}
