Edit brand style

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -10,7 +10,7 @@ layout: default
         {% endfor %}
     </div>
 </div>
-<div id="footer">
+<div class="footer">
     <p>
         <span class="work-name">{{ page.name }}</span>
         <span>&gt;</span> 
