--- a/_layouts/client.html
+++ b/_layouts/client.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 ---
-<span class="client-name" style="letter-spacing: 4px; display: block;">{{ page.name }}</span>
 <div class="slider-container fadeIn animated">
     <div class="slider">
         {% for slide in site.data.slides %}
@@ -11,8 +10,11 @@ layout: default
         {% endfor %}
     </div>
 </div>
-<div id="footer">
+<div id="client-footer" class="footer">
+    <div style="margin:1em;"><span class="client-name">{{ page.name }}</span></div>
+    <div>
     {% for work in page.works %}
         <a href="#{{work}}" data-work="{{work}}" class="work-name">{{work}}</a>
     {% endfor %}
+    </div>
 </div>
