--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -300,7 +300,7 @@ nav {
     text-transform: lowercase;
     border-left: 1px solid white;
     padding: 0 12px;
-    margin-top: 1em;
+    margin-bottom: 1em;
 
     @media screen and (max-width: $break-small) {
         font-size: 0.7em;
@@ -323,7 +323,7 @@ nav {
     padding: 6px 12px;
 }
 
-#footer {
+.footer {
     position: absolute;
     bottom: 0%;
     right: 0%;
