--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -336,6 +336,16 @@ nav {
     }
 }
 
+#client-footer {
+    div {
+        .client-name {
+            @media screen and (max-width: $break-small) {
+                font-size: 0.7em;
+            }
+        }
+    }
+}
+
 .hidden {
     display: none;
 }
